# ps1_ex4_nb_to_repo

./: .gitignore  README.md  Titanic Data Journey.ipynb  data_pipeline.ipynb  data_prep.py  environment.yml  few_stats.py  pyproject.toml
titanic_analysis/: analysis.py  model.py
