[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-analysis"
version = "0.1.0"
description = "Data analysis and machine learning pipeline for the Titanic dataset"
authors = [
    { name = "Yuhao Huo", email = "yh620@cam.ac.uk" }
    { name = "Stephen Lambert", email = "sjl225@cam.ac.uk" }
    { name = "Hsin-Ta Tsai", email = "htt29@cam.ac.uk" }
    { name = "Guoyu Wang", email = "gw498@cam.ac.uk" }
]
dependencies = [
    "seaborn",
    "scikit-learn",
    "wordcloud",
    "matplotlib",
    "numpy",
    "pandas",
    "ipykernel",
    "pathlib"
]
python_requires = "=3.12"

[project.urls]
homepage = "https://github.com/martinyuhaohuo/ps1_ex4_nb_to_repo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"titanic_analysis" = ["data/*.csv"]

[tool.setuptools]
include-package-data = true